--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,71 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>ms-mutants-ml</name>
-  <url>http://maven.apache.org</url>
+  <description>ML-Challenge</description>
+
+  <properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source> <!-- REQUIRED -->
+    <maven.compiler.target>${java.version}</maven.compiler.target> <!-- REQUIRED -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <appengine.maven.plugin>1.3.2</appengine.maven.plugin>
+  </properties>
+
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>1.5.9.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>1.5.9.RELEASE</version>
       <scope>test</scope>
     </dependency>
+    
+<!--     <dependency> -->
+<!-- 	  <groupId>com.google.cloud</groupId> -->
+<!-- 	  <artifactId>google-cloud-datastore</artifactId> -->
+<!-- 	  <version>1.14.0</version> -->
+<!-- 	</dependency> -->
+	
+	 <dependency>
+	   <groupId>com.google.appengine.tools</groupId>
+	   <artifactId>appengine-gcs-client</artifactId>
+	   <version>0.7</version>
+	 </dependency>
+	
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>1.5.7.RELEASE</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+<!-- START plugin -->
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+    	<artifactId>appengine-maven-plugin</artifactId>
+    	<version>${appengine.maven.plugin}</version>
+    	<configuration>
+	    <project>${endpoints.project.id}</project>
+            <version>1</version>
+       		<devserver.host>localhost</devserver.host>
+       		<devserver.port>8888</devserver.port>
+        </configuration>
+</plugin>
+<!-- END plugin -->
+    </plugins>
+</build>
 </project>
