--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
     	<artifactId>appengine-maven-plugin</artifactId>
-    	<version>${appengine.maven.plugin}</version>
+    	<version>1.3.1</version>
     	<configuration>
 	    <project>${endpoints.project.id}</project>
             <version>1</version>
