--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <maven.compiler.target>${java.version}</maven.compiler.target> <!-- REQUIRED -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <appengine.maven.plugin>1.3.2</appengine.maven.plugin>
+    <appengine.sdk.version>1.9.60</appengine.sdk.version>
+
   </properties>
 
   <dependencies>
@@ -29,19 +31,15 @@
       <version>1.5.9.RELEASE</version>
       <scope>test</scope>
     </dependency>
-    
-<!--     <dependency> -->
-<!-- 	  <groupId>com.google.cloud</groupId> -->
-<!-- 	  <artifactId>google-cloud-datastore</artifactId> -->
-<!-- 	  <version>1.14.0</version> -->
-<!-- 	</dependency> -->
-	
-	 <dependency>
-	   <groupId>com.google.appengine.tools</groupId>
-	   <artifactId>appengine-gcs-client</artifactId>
-	   <version>0.7</version>
-	 </dependency>
-	
+<dependency>
+
+    <groupId>org.dizitart</groupId>
+
+    <artifactId>nitrite</artifactId>
+
+    <version>1.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -64,12 +62,12 @@
     	<artifactId>appengine-maven-plugin</artifactId>
     	<version>1.3.1</version>
     	<configuration>
-	    <project>${endpoints.project.id}</project>
+	    <project>ml-challenge-mutants</project>
             <version>1</version>
        		<devserver.host>localhost</devserver.host>
        		<devserver.port>8888</devserver.port>
         </configuration>
-</plugin>
+	</plugin>
 <!-- END plugin -->
     </plugins>
 </build>
