--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 mutant.match.factor=4
 mutant.secuences.occurences=2
-datastore.persistence.key=DNASequences
+spring.configuration.env=dev
+ms.configuration.dateFormat=yyyy-MM-dd'T'HH:mm:ss'Z'
