--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ mutant.match.factor=4
 mutant.secuences.occurences=2
 spring.configuration.env=dev
 ms.configuration.dateFormat=yyyy-MM-dd'T'HH:mm:ss'Z'
+server.port=8090
